# JellyWeaver

./: .gitignore  README.md  make_icon.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css
frontend/src/components/: AppShell.svelte  ConfirmDialog.svelte  DirPicker.svelte  ProgressBar.svelte  RenameTreeDialog.svelte  RenameTreeView.svelte  SettingsDialog.svelte  SourcePanel.svelte  SourceTree.svelte  TargetPanel.svelte  TargetSection.svelte
frontend/src/lib/: api.ts  types.ts  ws.ts
frontend/src/lib/stores/: state.ts  ui.ts
frontend/src/routes/: +layout.svelte  +page.svelte
src/jelly_weaver/: __init__.py  main.py
src/jelly_weaver/api/: __init__.py  app.py  deps.py  ws.py
src/jelly_weaver/api/routes/: entries.py  fs.py  operations.py  settings.py  sources.py  targets.py
src/jelly_weaver/core/: hardlink.py  media_parser.py  models.py  scanner.py  state.py  tree.py
src/jelly_weaver/llm/: client.py  prompts.py
