[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jelly-weaver"
version = "0.1.0"
description = "PT download organizer for Jellyfin with LLM-powered naming"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[project.scripts]
jelly-weaver = "jelly_weaver.main:main"

[tool.setuptools.packages.find]
where = ["src"]
